@@ -1,5 +1,9 @@
 # This file documents the revision history for Perl extension Catalyst::Plugin::Session::Store::Cookie.
 
+  - Add storage_cookie_secure, storage_cookie_httponly and
+    storage_cookie_samesite options
+    with the same defaults as Catalyst::Plugin::Session::State::Cookie
+
 0.003 - 2017-02-16
   - Fixed issue with setting Sereal arguments.
   - Allow you to set Sereal arguments in configuration.
